--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/KSFlynn007/myFlix-client#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "parcel-bundler": "^1.10.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
